testsuite/vhdl/syntax/test_data/label_mismatch/002_entity.expected
label_mismatch/002_entity:4:1: syntax error: Label mismatch in Entity Declaration
entity testbench is
       ~~~~~~~~~ <<-- here
...
end entity test_bench;
           ~~~~~~~~~~ <<-- and here
